--- a/tutorial.ipynb
+++ b/tutorial.ipynb
@@ -1317,7 +1317,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We see topics related to attacks in specific incidents (e.g. cluster 0, 1, 4), likely topics about the international responses (cluster 2),  Brittney Griner (cluster 6), topic about Zelensky"
+    "We see topics related to attacks, specific incidents (e.g. cluster 0, 1, 4), likely topics about the international responses (cluster 2),  topic about Brittney Griner (cluster 6), topic about Zelensky (cluster 9)"
    ]
   },
   {
